//package eapli.base.order.domain.model;
//
//import eapli.base.product.domain.model.OrderedProduct;
//
//import java.util.Date;
//import java.util.List;
//
//public class OrderDto  {
//
//    public long id;
//    public List<OrderedProduct> listOfOrders;
//    public double priceWithoutTaxes;
//    public double priceWithTaxes;
//    public Date creationDate;
//    public String email;
//    public String address;
//    public OrderStatus orderStatus;
//    public double weight;
//    public
//}
